--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
+<!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <app-comp1>
-    
-  </app-comp1>
+  <app-comp1></app-comp1>
 </div>
