--- a/src/app/comp1/comp1.component.html
+++ b/src/app/comp1/comp1.component.html
@@ -1,94 +1,68 @@
-<div class="container-fluid" >
-  <div class="row bg-dark" style="height:50px;font-size: 42px">
-    <div class="col-3 text-light make-left" >
-      {{title}}
+<form action="#" id="myform"></form>
+<form action="#" id="myform1"></form>
+<div class="container-fluid">
+  <div class="row nav-bar">
+    <div class="col-md-2 make-center fontify">{{title}}</div>
+    <div class="col-md-5 make-center">
+      <input [(ngModel)]="post" type="text" class="form-control" placeholder="Say Something..." form="myform" required/>
     </div>
-    <div class="col-6 make-center">
-      <input [(ngModel)]="post" type="text" class="form-control " placeholder="say something ">
-      <button (click)="postHere()" type="button" class="ml-1 btn btn-secondary "> post</button>
-      
-    </div>
-   <div class="col-3">
-      
+    <div class="col-md-2 make-center">
+      <input (click)="posthere()" type="submit" class="btn btn-block" value="Post Here" form="myform"/>
     </div>
   </div>
 </div>
 
-
-
-
-<div class="container-fluid" *ngIf="postList.length==0">
-  <div class="row">
-    <div class="col-3">
-
-    </div>
-    <div class="col-6 h3 rounded bg-secondary mt-1 make-center text-light" style="height:100px;">
-      No post available
-      </div>
-      <div class="col-3">
-      
+<div class="container-fluid mt-3" *ngIf="postList.length > 0">
+  <div class="row mb-4" style="min-height:180px" *ngFor="let item of postList">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <div class="card  beautify animated slideInRight">
+        <div class="card-header">
+          <div class="name">{{name}} </div>
+          <div>{{item.d}} </div>
         </div>
-  </div>
-</div>
-
-
-
-
-
-<div class="container-fluid" *ngIf="postList.length > 0">
-<div class="row" *ngFor="let item of postList"style="min-height:100px;">
-  <div class="col-3"></div>
-  <div class="col-6">
-      <div class="card mt-1">
-        <div class="card-body make-center ">
-          <h5 class="card-title">
-            {{item.post}}
-          </h5>
+        <div class="card-body make-center cb">
+          {{item.post}}
         </div>
-
         <div class="card-footer">
-          <a href="#" (click)="likeCount(item)" class="btn btn-secondary">Like
-         {{item.like}} 
-        </a>
-
-        <a href="#" (click)="dislikeCount(item)" class="btn btn-secondary ml-2">dislike
-          {{item.dislike}}
-        </a>
-
-        <a href="#" (click)="deletePost(item)" class="btn btn-secondary ml-2">Delete post
-            {{item.delete}}
-          </a>
-
-          <input [(ngModel)]="comment" type="text" class="form-control " placeholder="write comment"> 
-         <a href="#" (click)="commenthere(item)" type="button" class="ml-1 btn btn-secondary "> comment
-        </a>
-
-         <div class="container-fluid" >
-            <div class="row" *ngFor="let i of item.commentList">
-              <div class="col-6 make-center"> 
-                  <a href="#" (click)="deleteComment(item,i)" class="btn btn-secondary ml-2">Delete comment
-                      {{item.delete}}
-                    </a>
-                    <a href="#" (click)="editComment(item)" class="btn btn-secondary ml-2">edit
-                        {{item.edit}}
-                      </a>
-              </div>
-              <div class="col-6">
-                  <div class="card mt-1">
-                    <div class="card-body make-center " style="height:10px;">
-                      <h5 class="card-title" >
-                        {{i}}
-                      </h5>
-                    </div>
-
-
+          <input [(ngModel)]="item.comment" type="text" class="form-control mb-2" placeholder="Comment Here..." form="myform1" required/>
+          <button (click)="like(item)" class="btn btn-primary mr-2">
+            Like <span> {{item.like}}</span>
+          </button>
+          <button (click)="dislike(item)" class="btn btn-danger mr-2">
+            Disike <span> {{item.dislike}}</span>
+          </button>
+          <button (click)="edit(item)" class="btn btn-primary mr-2">
+            Edit
+          </button>
+          <button (click)="del(item)" class="btn btn-primary mr-2">
+            Delete
+          </button>
+          <input type="submit" (click)="commenthere(item)" class="btn  mr-2" value="Comment {{item.commentcount}}" form="myform1" />
+          <div *ngIf="item.commentList.length > 0">
+            <div *ngFor="let com of item.commentList" >
+              <div class="mt-2 mb-2">{{com}}</div>
+              <button (click)="editcomment(item,com)" class="btn btn-primary mr-2">
+                Edit Comment
+              </button>
+              <button (click)="delcomment(item,com)" class="btn btn-primary mr-2">
+                Delete Comment
+              </button>
+            </div>
           </div>
+        </div>
       </div>
-
-
-
     </div>
-    <div class="col-3">
-    </div> 
+
+  </div>
 </div>
+
+<div class="container-fluid animated slideInRight" *ngIf="this.postList.length == 0">
+  <div class="row mt-5" style="min-height:180px">
+    <div class="col-md-3"></div>
+    <div class="col-md-6 make-center beautify">
+          No Post Available
+    </div>
+    <div class="col-md-3"></div>
+  </div>
 </div>
