--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div>
-  <app-comp1></app-comp1>
+  <app-dacbook></app-dacbook>
 </div>
